<resources>
    <string name="app_name">XM Pricing</string>
    <string name="storage_not_available">Storage not available</string>
    <string name="daisyconfig">DaisyConfig</string>
    <string name="v_01">V.01</string>
    <string name="baseurl">baseURL=</string>
    <string name="save_and_load">Save and Load</string>
    <string name="loading">Loading...</string>
    <string name="invalid_url">Invalid Url</string>
    <string name="logs">LOGS</string>
    <string name="application_logs">Application Log</string>
    <string name="card_logs">Card Log</string>
    <string name="promotion_logs">Promotion Logs</string>
    <string name="back">Back</string>
    <string name="_20_may_2020">20 May 2020</string>
    <string name="no_data_available">No data available</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="clear_and_exit">Clear and exit</string>
    <string name="no_internet_available">Oops! \n Please check your internet connectivity and try again.
    </string>
    <string name="continuee">Continue</string>
    <string name="some_issue_occur">Some issue occur</string>
    <string name="chche">/cache</string>
    <string name="databse">/databases</string>
    <string name="dark_mode">Dark mode</string>
    <string name="packageName">com.daisy</string>
    <string name="onePlus">OnePlus</string>
    <string name="enter_password">ENTER PASSWORD</string>
    <string name="unlock">UNLOCK</string>
    <string name="invalid_password">INVALID PASSWORD</string>
    <string name="welcome">Welcome</string>
    <string name="this_app_required_serveral_special_permission_to_prtform_properly_parsing_begin_below_will_start_guiding_you_though_the_process">This app requires several special permissions to perform properly. Pressing \'begin\' below will start guiding you through the process.</string>
    <string name="begin">BEGIN</string>
    <string name="next">NEXT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grant_media_permission">Grant Media Permission</string>
    <string name="display_over_other_apps">DISPLAY OVER OTHER APPS</string>
    <string name="grand_usage_access">GRANT USAGE ACCESS</string>
    <string name="modify_system_settings">MODIFY SYSTEM SETTINGS</string>
    <string name="app_settings">App Settings</string>
    <string name="lock_access_to_play_store">LOCK ACCESS TO PLAY STORE</string>
    <string name="lock_access_to_browser">LOCK ACCESS TO BROWSER</string>
    <string name="lock_access_to_message">LOCK ACCESS TO MESSAGES</string>
    <string name="delete_photos">Delete Photos</string>
    <string name="only_disable_if_using_personal_device">* Only disable if using personal device</string>
    <string name="device_detected">Device Detected:</string>
    <string name="use_detected_device">Use Detected Device</string>
    <string name="score_code">Score Code</string>
    <string name="don_t_optimized_battery">DISABLE BATTERY OPTIMIZATION</string>
    <string name="sumsung_galaxy_note_10">Sumsung Galaxy Note 10</string>
    <string name="save_and_start_mpc"><![CDATA[Save and start XM Pricing >]]></string>
    <string name="store_code">ENTER STORE CODE</string>
    <string name="Password">Password</string>
    <string name="manage_device_content">Manage Device Content</string>
    <string name="grant_permissions">GRANT PERMISSIONS</string>
    <string name="wifi">wifi</string>
    <string name="pixel_emulator">Google sdk_gphone_x86</string>
    <string name="password">PASSWORD</string>
    <string name="store_id">store_id</string>
    <string name="please_enter_store_code">Please enter store code</string>
    <string name="please_enter_store_password">Please enter store password</string>
    <string name="add_screen">Add Screen</string>
    <string name="isle">Aisle</string>
    <string name="shelf">Shelf</string>
    <string name="isle_not_empty">Aisle can not be empty</string>
    <string name="position_not_empty">Position can not be empty</string>
    <string name="shelf_not_empty">Shelf can not be empty</string>
    <string name="mi_extra">MI EXTRA PERMISSION</string>
    <string name="update_position">MODIFY POSITION</string>
    <string name="update_screen">Update Screen</string>
    <string name="signin">SignIn</string>
    <string name="update_baseurl">Update BaseUrl</string>
    <string name="baseurl_can_not_be_empty">Base Url can not be empty</string>
    <string name="enter_valid_url">Enter valid base url</string>
    <string name="url_must_end_with_slash">Please enter a slash after entering the URL</string>
    <string name="configuration">Configuration</string>
    <string name="set_refresh_timer">Set Refresh Timer</string>
    <string name="set_refresh_time">Set Refresh Time</string>
    <string name="set_timer">Set Timer</string>
    <string name="direct_update">DIRECT UPDATE</string>
    <string name="change_language">CHANGE LANGUAGE</string>
    <string name="choose_lang">Choose Language</string>
    <string name="refresh_time_set">Refresh time set</string>
    <string name="promotion">promotion</string>
    <string name="open">Open</string>
    <string name="data_store" translatable="false">Data store</string>
    <string name="login_success">Login success</string>
    <string name="direct_apk_update">Check version updates</string>
    <string name="screen_add">Screen add</string>
    <string name="position_update">Position updated</string>
    <string name="load_add_screen">Load add screen</string>
    <string name="display_over_the_app">Please allow XM Pricing to display over other apps on your device.</string>
    <string name="allow_data_access">Please allow Usage Data Access to XM Pricing in your device\'s settings.</string>
    <string name="modify_system_settings_text">Please allow XM Pricing to modify system settings in your device.</string>
    <string name="permission_req">Permission Required</string>
    <string name="battery_optimized">Please allow XM Pricing to disable battery optimization in your device.</string>
    <string name="position">Position</string>
    <string name="ok">Ok</string>
    <string name="cancle">Cancel</string>
    <string name="invald_time">Invalid time</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="postigues">Portuguese</string>
    <string name="product_not_available">Product  not available</string>
    <string name="store_code_id">store_code</string>
    <string name="enter_base_url_for_server">Enter url for the server</string>
    <string name="product">Product</string>
    <string name="carrier">Carrier</string>
    <string name="webkit_orientation">Orientation</string>
    <string name="defaultt">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="update_available">Update Available</string>
    <string name="proceed">Proceed</string>
    <string name="dismiss">Dismiss</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="face_detected">Face detected</string>
    <string name="cancel">Cancel</string>
    <string name="lock">Lock</string>
    <string name="unlockk">Unlock</string>
    <string name="permission">Permissions</string>
    <string name="credentials">Credentials</string>
    <string name="select_pro">SELECT PRODUCT</string>
    <string name="access_locked">ACCESS LOCKED</string>
    <string name="unlock_with_arrow"><![CDATA[UNLOCK >]]></string>
    <string name="update_time">Update time</string>
    <string name="app_version">VERSION: </string>
    <string name="PERMISSION">PERMISSIONS</string>
    <string name="settings_cap">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="file_has_issue">"Please contact your developer or try installing the app again later!"</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="feedback">FEEDBACK</string>
    <string name="Bug">BUG</string>
    <string name="ISSUE">ISSUE</string>
    <string name="SUGGESION">SUGGESTION</string>
    <string name="OTHER">OTHER</string>
    <string name="all_field_are_mendetory">All fields are mandatory</string>
    <string name="launchotherApp">Launch Other App</string>
    <string name="screen_touched">Screen touched</string>
    <string name="package_not_available">There is no package available in android</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="sanitised">Sanitize Device</string>
    <string name="admin_receiver_status">Sample Device Admin: %1$s</string>
    <string name="admin_receiver_status_enabled">enabled</string>
    <string name="admin_receiver_status_disabled">disabled</string>
    <string name="admin_receiver_status_pw_changed">pw changed</string>
    <string name="admin_receiver_status_pw_failed">pw failed</string>
    <string name="admin_receiver_status_pw_succeeded">pw succeeded</string>
    <string name="admin_receiver_status_disable_warning">
        This is an optional message to warn the user about disabling.</string>
    <string name="wipe_warning_second_ok">BOOM!</string>
    <string name="wipe_warning_second_no">Oops, run away!</string>
    <string name="encryption_not_supported">Encryption is not supported on this device.</string>
    <string name="encryption_not_supported_ok">OK</string>
    <string name="encryption_status_unknown">unknown</string>
    <string name="encryption_status_unsupported">unsupported</string>
    <string name="encryption_status_inactive">inactive</string>
    <string name="encryption_status_activating">activating</string>
    <string name="encryption_status_active">active</string>
    <string name="expiration_status_none">None</string>
    <string name="expiration_status_past">Password expired %1$s ago</string>
    <string name="expiration_status_future">Password will expire %1$s from now</string>
    <string name="admin_permission">ADMIN PRIVILEGES</string>
    <string name="gpsEnable">Enable GPS</string>
    <string name="securityHeader">Security</string>
    <string name="no_update_available">"Update not available "</string>
    <string name="update_product">UPDATE PRODUCT</string>
    <string name="screen_update">Screen update</string>
    <string name="enable_gps">Your GPS seems to be disabled, please enable it?</string>
    <string name="wait">Wait...</string>
    <string name="select_language">Select language</string>
    <string name="language">Language</string>
    <string name="confirm">Confirm</string>
    <string name="please_select_lang">"Please select language "</string>
    <string name="arabic">Arabic</string>
    <string name="danish">Danish</string>
    <string name="dutch">Dutch</string>
    <string name="finnish">Finnish</string>
    <string name="hindi">Hindi</string>
    <string name="italian">Italian</string>
    <string name="korean">Korean</string>
    <string name="norwegian">Norwegian</string>
    <string name="polish">Polish</string>
    <string name="portuguese">Portuguese</string>
    <string name="russian">Russian</string>
    <string name="swedish">Swedish</string>
    <string name="turkish">Turkish</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="alramHeader">Enable Silent Alarm</string>
    <string name="last_update_time">Last updated: </string>
    <string name="empty_password">Please enter the password to access the configuration settings</string>
    <string name="syncLogs">Sync Logs</string>
    <string name="app_is_not_installed">"App is not installed "</string>
    <string name="device_not_detected">Device not Detected</string>
    <string name="or">-Or-</string>
    <string name="to_proceed_enter_mpc_key">To proceed, enter your XM Pricing store code  and password below.</string>
</resources>