<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1"
        tools:context=".activity.welcomeScreen.WelcomeScreen">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp60"
            android:layout_marginEnd="@dimen/dp60"
            android:layout_marginBottom="@dimen/dp80"
            android:gravity="center|start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rbold"
                android:text="@string/credentials"
                android:textColor="@color/dark_grey_blue"
                android:textSize="@dimen/dp25" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp6"
                android:fontFamily="@font/rragular"
                android:text="@string/to_proceed_enter_mpc_key"
                android:textColor="@color/dark_grey_blue"
                android:textSize="@dimen/dp14" />

            <EditText
                android:id="@+id/store_code"

                android:layout_width="match_parent"

                android:layout_height="@dimen/dp40"
                android:layout_marginTop="@dimen/dp14"
                android:background="@drawable/rounded_edit_text"
                android:gravity="center"
                android:hint="@string/store_code"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="@dimen/dp10"
                android:textSize="@dimen/dp10"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"

                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:layout_marginTop="@dimen/dp14"
                android:background="@drawable/rounded_edit_text"
                android:gravity="center"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/dp10"
                android:textSize="@dimen/dp10"
                android:textStyle="bold" />


            <TextView

                android:id="@+id/singup"
                style="@style/fontBold"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:layout_marginTop="@dimen/dp13"
                android:background="@drawable/rounded_edit_text"
                android:gravity="center"
                android:text="@string/next"
                android:textColor="@color/dark_grey_blue"
                android:textSize="@dimen/dp10"
                android:textStyle="bold" />

        </LinearLayout>


    </RelativeLayout>
</layout>