<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"

        tools:context=".activity.logs.LogsMainActivity">

        <RelativeLayout
            android:layout_width="@dimen/dp250"
            android:layout_height="match_parent"
            android:background="@color/mettle_blue"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/top_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/cancel"
                        android:layout_width="@dimen/dp40"
                        android:layout_height="@dimen/dp40"
                        android:src="@drawable/ic_arrow_back" />
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/icon"
                android:layout_width="@dimen/dp120"
                android:layout_height="@dimen/dp120"
                android:layout_below="@id/top_layout"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_logs_icon" />

            <TextView

                style="@style/fontMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/logs"
                android:textColor="@color/white"
                android:textSize="@dimen/sp25" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/applicationLogs"
                android:layout_width="@dimen/dp200"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border_format"
                android:text="@string/application_logs"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/cardLogs"
                android:layout_width="@dimen/dp200"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:background="@drawable/button_border_format"
                android:text="@string/card_logs"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/promotionLogs"
                android:layout_width="@dimen/dp200"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:background="@drawable/button_border_format"
                android:text="@string/promotion_logs"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/syncAllLogs"
                android:layout_width="@dimen/dp200"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:background="@drawable/button_border_format"
                android:text="@string/syncLogs"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/settings"
                android:layout_width="@dimen/dp200"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:background="@drawable/button_border_format"
                android:text="@string/settings"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="gone" />

        </LinearLayout>


    </LinearLayout>
</layout>