<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.editorTool.EditorTool">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp150"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daisyconfig"
            android:textColor="@color/black"
            android:textSize="@dimen/dp20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5"
            android:text="@string/v_01"
            android:textColor="@color/black"
            android:textSize="@dimen/dp15" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp100"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp10"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baseurl"
                android:textColor="@color/black"
                android:textSize="@dimen/sp18" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <EditText
                android:id="@+id/baseUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp5"
                android:inputType="text"
                android:textSize="@dimen/dp14"
                android:imeOptions="actionDone"
                android:background="@drawable/edit_text_format"
                android:hint="https://baseURL"
                android:padding="@dimen/dp10" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">


        <Button
            android:layout_width="@dimen/dp200"
            android:id="@+id/saveAndLoad"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border_format"
            android:text="@string/save_and_load"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>
</layout>