<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rootLayout"
        android:orientation="vertical"
        tools:context=".activity.configSettings.ConfigSettings">

        <LinearLayout
            android:layout_marginTop="@dimen/dp20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp10"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:fontFamily="@font/rmedium"
                android:text="@string/configuration"
                android:textColor="@color/black"
                android:textSize="@dimen/dp20" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/logs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View

                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp20"
                android:fontFamily="@font/rragular"
                android:text="@string/logs"
                android:textColor="@color/black"
                android:textSize="@dimen/sp15" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/updatePosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp20"
                android:fontFamily="@font/rragular"
                android:text="@string/update_position"
                android:textColor="@color/black"
                android:textSize="@dimen/sp15" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/updateBaseUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp20"
                android:fontFamily="@font/rragular"
                android:text="@string/update_baseurl"
                android:textColor="@color/black"
                android:textSize="@dimen/sp15" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/setRefreshRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp20"
                android:fontFamily="@font/rragular"
                android:text="@string/set_refresh_timer"
                android:textColor="@color/black"
                android:textSize="@dimen/sp15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/changeLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp20"
                android:fontFamily="@font/rragular"
                android:text="@string/change_language"
                android:textColor="@color/black"
                android:textSize="@dimen/sp15" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray" />
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</layout>
