<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout

        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center|left"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginStart="@dimen/dp10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <TextView
                android:layout_marginStart="@dimen/dp5"
                android:textSize="@dimen/sp15"
                android:fontFamily="@font/rbold"
                android:textColor="@color/black"
                android:text="@string/update_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>




        <View
            android:background="@color/gray"
            android:layout_marginTop="@dimen/dp20"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>




        <TextView
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="@dimen/sp15"
            android:text="@string/isle"
            android:fontFamily="@font/rragular"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/isle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/editTextColor"
            android:layout_marginStart="@dimen/dp15"
            android:layout_marginEnd="@dimen/dp15"
            android:layout_marginTop="@dimen/dp5"
            android:layout_marginBottom="@dimen/dp15"
            android:inputType="number"
            android:textSize="@dimen/dp14"
            android:background="@drawable/edit_text_format"
            android:hint="@string/isle"
            android:textColorHint="@color/editTextLineColor"
            android:padding="@dimen/dp10" />
        <TextView
            android:layout_marginStart="@dimen/dp20"
            android:text="@string/shelf"
            android:fontFamily="@font/rragular"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText

            android:id="@+id/shelf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/editTextColor"
            android:layout_marginStart="@dimen/dp15"
            android:layout_marginEnd="@dimen/dp15"
            android:layout_marginTop="@dimen/dp5"
            android:layout_marginBottom="@dimen/dp15"            android:inputType="number"
            android:textSize="@dimen/dp14"
            android:background="@drawable/edit_text_format"
            android:hint="@string/shelf"
            android:textColorHint="@color/editTextLineColor"
            android:padding="@dimen/dp10" />
        <TextView
            android:layout_marginStart="@dimen/dp20"
            android:text="@string/position"
            android:fontFamily="@font/rragular"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText

            android:id="@+id/position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/editTextColor"
            android:layout_marginStart="@dimen/dp15"
            android:layout_marginEnd="@dimen/dp15"
            android:layout_marginTop="@dimen/dp5"
            android:layout_marginBottom="@dimen/dp15"            android:inputType="number"
            android:textSize="@dimen/dp14"
            android:background="@drawable/edit_text_format"
            android:hint="@string/position"
            android:textColorHint="@color/editTextLineColor"
            android:padding="@dimen/dp10" />


        <Button
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp15"
            android:layout_width="@dimen/dp200"
            android:id="@+id/updatePosition"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border_format"
            android:text="@string/update_position"
            android:textColor="@color/white" />


    </LinearLayout>
</layout>